# way-display

./: .gitignore  Cargo.toml  README.md  justfile  set-display.desktop  way-display.desktop
src/: connection.rs  current_state.rs  detection.rs  display_config_proxy.rs  errors.rs  main.rs  monitor.rs  printable_monitor.rs  property_map_ext.rs  structs.rs
src/cli/: display_command.rs  mod.rs  monitor_pattern.rs
