[package]
name = "set-display"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.32", features = [
    "derive",
] }
futures = "0.3.31"
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "time"] }
zbus = "5.5.0"
